Add tests for Json module

--- a/native/src/main/resources/error.properties
+++ b/native/src/main/resources/error.properties
@@ -30,7 +30,7 @@ error.json.parser.exception=\
   ''{0}'' at line: ''{1}'' column: ''{2}''
 
 error.incompatible.type=\
-  incompatible type expected ''{0}'' found ''{1}''
+  incompatible expected type ''{0}'' for value ''{1}''
 
 error.array.size.mismatch=\
   array size is not compatible with the expected size
