--- a/native/src/main/resources/error.properties
+++ b/native/src/main/resources/error.properties
@@ -46,3 +46,6 @@ error.required.field.not.present=\
 
 error.invalid.type.for.field=\
   invalid type for field ''{0}''
+
+error.duplicate.field=\
+  duplicate field ''{0}''
