Address review suggestions

--- a/native/src/main/resources/error.properties
+++ b/native/src/main/resources/error.properties
@@ -49,3 +49,6 @@ error.invalid.type.for.field=\
 
 error.duplicate.field=\
   duplicate field ''{0}''
+
+error.cannot.convert.to.expected.type=\
+  ''{0}'' value ''{1}'' cannot be converted to ''{2}''
