Support option to disable data projection

--- a/native/src/main/resources/error.properties
+++ b/native/src/main/resources/error.properties
@@ -52,3 +52,6 @@ error.duplicate.field=\
 
 error.cannot.convert.to.expected.type=\
   ''{0}'' value ''{1}'' cannot be converted to ''{2}''
+
+error.undefined.field=\
+  undefined field ''{0}''
