Support sub type of int as expected type

--- a/native/src/main/resources/error.properties
+++ b/native/src/main/resources/error.properties
@@ -24,7 +24,7 @@ error.unsupported.type=\
   unsupported type ''{0}''
 
 error.json.reader.failure=\
-  error reading JSON: ''{0}''
+  error reading while JSON: ''{0}''
 
 error.json.parser.exception=\
   ''{0}'' at line: ''{1}'' column: ''{2}''
