--- a/ballerina/build.gradle
+++ b/ballerina/build.gradle
@@ -65,6 +65,23 @@ ballerina {
     langVersion = ballerinaLangVersion
 }
 
+configurations {
+    externalJars
+}
+
+dependencies {
+
+    externalJars(group: 'com.jayway.jsonpath', name: 'json-path', version: "${javaJsonPathVersion}") {
+        transitive = false
+    }
+    externalJars(group: 'net.minidev', name: 'json-smart', version: "${javaJsonSmartVersion}") {
+        transitive = false
+    }
+    externalJars(group: 'net.minidev', name: 'accessors-smart', version: "${javaAccessorsSmartVersion}") {
+        transitive = false
+    }
+}
+
 task updateTomlFiles {
     doLast {
         def newConfig = ballerinaTomlFilePlaceHolder.text.replace("@project.version@", project.version)
