--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -23,3 +23,10 @@ path = "./lib/json-path-2.7.0.jar"
 groupId = "com.jayway.jsonpath"
 artifactId = "json-path"
 version = "2.7.0"
+
+[[platform.java11.dependency]]
+path = "./lib/json-smart-2.4.7.jar"
+groupId = "net.minidev.json"
+artifactId = "json-smart"
+version = "2.4.7"
+
