--- a/build-config/resources/Ballerina.toml
+++ b/build-config/resources/Ballerina.toml
@@ -6,7 +6,7 @@ authors = ["Ballerina"]
 keywords = ["json"]
 repository = "https://github.com/ballerina-platform/module-ballerina.jsondata"
 license = ["Apache-2.0"]
-distribution = "2201.8.4"
+distribution = "2201.9.0-20240326-110600-aca0cc0c"
 
 [platform.java17]
 graalvmCompatible = true
