--- a/settings.gradle
+++ b/settings.gradle
@@ -16,6 +16,26 @@
  * under the License.
  */
 
+pluginManagement {
+    plugins {
+        id "com.github.spotbugs" version "${githubSpotbugsVersion}"
+        id "com.github.johnrengelman.shadow" version "${githubJohnrengelmanShadowVersion}"
+        id "de.undercouch.download" version "${underCouchDownloadVersion}"
+        id "net.researchgate.release" version "${researchgateReleaseVersion}"
+        id "io.ballerina.plugin" version "${ballerinaGradlePluginVersion}"
+    }
+    repositories {
+        gradlePluginPortal()
+        maven {
+            url = 'https://maven.pkg.github.com/ballerina-platform/*'
+            credentials {
+                username System.getenv("packageUser")
+                password System.getenv("packagePAT")
+            }
+        }
+    }
+}
+
 plugins {
     id "com.gradle.enterprise" version "3.2"
 }
