--- a/gradle.properties
+++ b/gradle.properties
@@ -7,12 +7,16 @@ checkstyleToolVersion=10.12.0
 puppycrawlCheckstyleVersion=10.12.0
 testngVersion=7.6.1
 slf4jVersion=2.0.7
-githubSpotbugsVersion=5.0.14
-githubJohnrengelmanShadowVersion=8.1.1
-underCouchDownloadVersion=4.0.4
-researchgateReleaseVersion=2.8.0
+spotbugsVersion=5.0.14
+shadowJarPluginVersion=8.1.1
+downloadPluginVersion=4.0.4
+releasePluginVersion=2.8.0
 ballerinaGradlePluginVersion=2.0.1
 javaJsonPathVersion=2.9.0
 javaJsonSmartVersion=2.4.11
 javaAccessorsSmartVersion=2.4.7
+
+stdlibFileVersion=1.9.0
 stdlibIoVersion=1.6.0
+stdlibOsVersion=1.8.0
+stdlibTimeVersion=2.4.0
