--- a/settings.gradle
+++ b/settings.gradle
@@ -18,10 +18,10 @@
 
 pluginManagement {
     plugins {
-        id "com.github.spotbugs" version "${githubSpotbugsVersion}"
-        id "com.github.johnrengelman.shadow" version "${githubJohnrengelmanShadowVersion}"
-        id "de.undercouch.download" version "${underCouchDownloadVersion}"
-        id "net.researchgate.release" version "${researchgateReleaseVersion}"
+        id "com.github.spotbugs" version "${spotbugsVersion}"
+        id "com.github.johnrengelman.shadow" version "${shadowJarPluginVersion}"
+        id "de.undercouch.download" version "${downloadPluginVersion}"
+        id "net.researchgate.release" version "${releasePluginVersion}"
         id "io.ballerina.plugin" version "${ballerinaGradlePluginVersion}"
     }
     repositories {
