--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.caching=true
-group=io.ballerina.stdlib
+group=io.ballerina.lib
 version=0.1.0-SNAPSHOT
-ballerinaLangVersion=2201.9.0-20240326-110600-aca0cc0c
+ballerinaLangVersion=2201.9.0-20240403-114600-ceb51559
 
 checkstyleToolVersion=10.12.0
 puppycrawlCheckstyleVersion=10.12.0
