--- a/ballerina/build.gradle
+++ b/ballerina/build.gradle
@@ -144,3 +144,6 @@ build.dependsOn deleteDependencyTomlFiles
 
 test.dependsOn ":${packageName}-native:build"
 test.dependsOn ":${packageName}-compiler-plugin:build"
+
+publish.dependsOn build
+publishToMavenLocal.dependsOn build
