--- a/ballerina/CompilerPlugin.toml
+++ b/ballerina/CompilerPlugin.toml
@@ -3,4 +3,4 @@ id = "constraint-compiler-plugin"
 class = "io.ballerina.lib.data.jsondata.compiler.JsondataCompilerPlugin"
 
 [[dependency]]
-path = "../compiler-plugin/build/libs/data.jsondata-compiler-plugin-0.1.0.jar"
+path = "../compiler-plugin/build/libs/data.jsondata-compiler-plugin-0.1.1-SNAPSHOT.jar"
