--- a/native/build.gradle
+++ b/native/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation group: 'org.ballerinalang', name: 'ballerina-runtime', version: "${ballerinaLangVersion}"
     implementation group: 'org.ballerinalang', name: 'value', version: "${ballerinaLangVersion}"
     implementation group: 'com.jayway.jsonpath', name: 'json-path', version: "${javaJsonPathVersion}"
+
+    implementation group: 'io.ballerina.stdlib', name: 'constraint-native', version: "${stdlibConstraintVersion}"
 }
 
 checkstyle {
