Update file version

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,7 +16,7 @@ javaJsonPathVersion=2.9.0
 javaJsonSmartVersion=2.4.11
 javaAccessorsSmartVersion=2.4.7
 
-stdlibFileVersion=1.9.0
+stdlibFileVersion=1.10.0-20240807-205900-a4d66bb
 stdlibIoVersion=1.6.0
 stdlibOsVersion=1.8.0
 stdlibTimeVersion=2.4.0
