Update time version

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,5 +19,5 @@ javaAccessorsSmartVersion=2.4.7
 stdlibFileVersion=1.10.1-20241007-160900-03f7b64
 stdlibIoVersion=1.6.2-20240928-084100-656404f
 stdlibOsVersion=1.8.1-20241001-120600-dd1626e
-stdlibTimeVersion=2.4.0
+stdlibTimeVersion=2.5.1-20240930-120200-e59222b
 stdlibConstraintVersion=1.5.1-20240930-123400-5ecd396
