Fix toJson for cyclic values

--- a/native/src/main/resources/json_error.properties
+++ b/native/src/main/resources/json_error.properties
@@ -55,3 +55,6 @@ error.cannot.convert.to.expected.type=\
 
 error.undefined.field=\
   undefined field ''{0}''
+
+error.cyclic.reference=\
+  the value has a cyclic reference
