Fix build script

--- a/compiler-plugin-test/build.gradle
+++ b/compiler-plugin-test/build.gradle
@@ -26,7 +26,7 @@ description = 'Ballerina - Jsondata Compiler Plugin Tests'
 
 dependencies {
     checkstyle project(':checkstyle')
-    checkstyle "com.puppycrawl.tools:checkstyle:${puppycrawlCheckstyleVersion}"
+    checkstyle "com.puppycrawl.tools:checkstyle:${checkstyleToolVersion}"
 
     implementation project(':data.jsondata-compiler-plugin')
 
@@ -41,7 +41,7 @@ tasks.withType(Checkstyle) {
 }
 
 checkstyle {
-    toolVersion "${project.puppycrawlCheckstyleVersion}"
+    toolVersion "${project.checkstyleToolVersion}"
     configFile rootProject.file("build-config/checkstyle/build/checkstyle.xml")
     configProperties = ["suppressionFile" : file("${rootDir}/build-config/checkstyle/build/suppressions.xml")]
 }
