--- a/native/build.gradle
+++ b/native/build.gradle
@@ -27,7 +27,7 @@ description = 'Ballerina - Data.Json Java Utils'
 dependencies {
     implementation 'junit:junit:4.13.1'
     checkstyle project(':checkstyle')
-    checkstyle "com.puppycrawl.tools:checkstyle:${puppycrawlCheckstyleVersion}"
+    checkstyle "com.puppycrawl.tools:checkstyle:${checkstyleToolVersion}"
     implementation 'org.apache.commons:commons-lang3:3.6'
 
     implementation group: 'org.ballerinalang', name: 'ballerina-lang', version: "${ballerinaLangVersion}"
