--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.caching=true
 group=io.ballerina.lib
 version=1.0.1-SNAPSHOT
-ballerinaLangVersion=2201.11.0
+ballerinaLangVersion=2201.12.0-20250228-115200-f38db343
 
 checkstyleToolVersion=10.12.0
 testngVersion=7.6.1
