--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -1,12 +1,12 @@
 [package]
 org = "ballerina"
 name = "data.jsondata"
-version = "1.0.1"
+version = "1.1.0"
 authors = ["Ballerina"]
 keywords = ["json", "json path", "json-transform", "json transform", "json to json", "json-convert", "json convert"]
 repository = "https://github.com/ballerina-platform/module-ballerina-data.jsondata"
 license = ["Apache-2.0"]
-distribution = "2201.11.0"
+distribution = "2201.12.0"
 export = ["data.jsondata"]
 
 [platform.java21]
@@ -15,8 +15,8 @@ graalvmCompatible = true
 [[platform.java21.dependency]]
 groupId = "io.ballerina.lib"
 artifactId = "jsondata-native"
-version = "1.0.1"
-path = "../native/build/libs/data.jsondata-native-1.0.1-SNAPSHOT.jar"
+version = "1.1.0"
+path = "../native/build/libs/data.jsondata-native-1.1.0-SNAPSHOT.jar"
 
 [[platform.java21.dependency]]
 path = "./lib/json-path-2.9.0.jar"
@@ -39,5 +39,5 @@ version = "2.4.7"
 [[platform.java21.dependency]]
 groupId = "io.ballerina.stdlib"
 artifactId = "constraint-native"
-version = "1.6.0"
-path = "./lib/constraint-native-1.6.0.jar"
+version = "1.7.0"
+path = "./lib/constraint-native-1.7.0-20250305-165400-52275bd.jar"
