--- a/gradle.properties
+++ b/gradle.properties
@@ -15,8 +15,8 @@ javaJsonPathVersion=2.9.0
 javaJsonSmartVersion=2.4.11
 javaAccessorsSmartVersion=2.4.7
 
-stdlibFileVersion=1.11.0
-stdlibIoVersion=1.7.0
-stdlibOsVersion=1.9.0
-stdlibTimeVersion=2.6.0
-stdlibConstraintVersion=1.6.0
+stdlibFileVersion=1.12.0-20250305-172800-e9a08f6
+stdlibIoVersion=1.8.0-20250304-133300-967a7a4
+stdlibOsVersion=1.10.0-20250305-165700-ad282f0
+stdlibTimeVersion=2.7.0-20250304-133100-009bfd7
+stdlibConstraintVersion=1.7.0-20250305-165400-52275bd
